fix: Fix class name for better alignment

--- a/nanodegree-frontend/p1/css/styles.css
+++ b/nanodegree-frontend/p1/css/styles.css
@@ -28,7 +28,7 @@ h2, h3, h4, h5{
 }
 
 /* main */
-.colors-container {
+.color-container {
   display: flex;
   flex-flow: column;
   margin-top: 15px;
